// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots drawer controlled 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <button
        data-css-bzft25=""
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <span
          className="css-1en8fmq"
        >
          Toggle drawer
        </span>
      </button>
      <div
        className="css-1fq8nx6"
      >
        <div
          className="css-a8p3d5"
          onClick={[Function]}
        >
          <div
            className="css-1m37xb3"
          >
            <div
              className="css-k4qf09"
            >
              <div>
                Drawer Base Here
              </div>
            </div>
          </div>
          <div
            className="css-qs2rg7"
          >
            <button
              className="css-wepra9"
              onClick={[Function]}
            >
              <div
                aria-label="Collapse"
                className="css-xnveog"
              >
                <div
                  className="css-otejxm"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-ule0ur"
        >
          <div
            className="css-1j3g0qd"
          >
            Drawer Content Here
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div
      className="css-1fq8nx6"
    >
      <div
        className="css-58omaf"
        onClick={[Function]}
      >
        <div
          className="css-1m37xb3"
        >
          <div
            className="css-k4qf09"
          >
            <div>
              Drawer Base Here
            </div>
          </div>
        </div>
        <div
          className="css-qs2rg7"
        >
          <button
            className="css-wepra9"
            onClick={[Function]}
          >
            <div
              aria-label="Expand"
              className="css-1byjzqg"
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-1i2htk9"
      >
        <div
          className="css-1j3g0qd"
        >
          Drawer Content Here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer row component with actions 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div
      className="css-1fq8nx6"
    >
      <div
        className="css-58omaf"
        onClick={[Function]}
      >
        <div
          className="css-1m37xb3"
        >
          <div
            className="css-k4qf09"
          >
            <div
              className="css-13y9csq"
            >
              <div
                className="css-js3ti3"
              >
                <span
                  className="css-15yq56v"
                >
                  <a
                    href="https://duckduckgo.com?q=image"
                  >
                    <img
                      src="https://cataas.com/cat"
                    />
                  </a>
                </span>
                <div
                  className="css-4nxbcy"
                >
                  <span
                    className="css-1fxa3fl"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <a
                      href="https://duckduckgo.com?q=overlay"
                    >
                      Overlay
                    </a>
                  </span>
                </div>
              </div>
              <div
                className="css-kxulf3"
              >
                <div
                  className="css-1e23mlv"
                >
                  <span
                    className="css-1ublh7e"
                  >
                    <a
                      href="https://duckduckgo.com?q=title"
                    >
                      I'm a Row with Actions
                    </a>
                  </span>
                </div>
                <div
                  className="css-gmo5z6"
                >
                  <span
                    className="css-1kcrbi9"
                  >
                    <span
                      className="css-1ublh7e"
                    >
                      <a
                        href="https://duckduckgo.com?q=cats"
                      >
                        Kitten McCatbuns
                      </a>
                    </span>
                  </span>
                  <span
                    aria-hidden={true}
                    className="css-kykfz1"
                  >
                    ·
                  </span>
                  <span
                    className="css-1kcrbi9"
                  >
                    23 hours of cuteness
                  </span>
                </div>
              </div>
              <div
                className="css-h4r20u"
              >
                <button
                  className="css-10dk2o2"
                  onClick={[Function]}
                >
                  <div
                    className="css-otejxm"
                  >
                    <svg
                      aria-label="more icon"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 14.5c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm12 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm-6 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2z"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-qs2rg7"
        >
          <button
            className="css-wepra9"
            onClick={[Function]}
          >
            <div
              aria-label="Expand"
              className="css-1byjzqg"
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-1i2htk9"
      >
        <div
          className="css-1j3g0qd"
        >
          Drawer Content Here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer stack of drawers 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <div
        className="css-1fq8nx6"
      >
        <div
          className="css-58omaf"
          onClick={[Function]}
        >
          <div
            className="css-1m37xb3"
          >
            <div
              className="css-k4qf09"
            >
              <div>
                The Drawer #1
              </div>
            </div>
          </div>
          <div
            className="css-qs2rg7"
          >
            <button
              className="css-wepra9"
              onClick={[Function]}
            >
              <div
                aria-label="Expand"
                className="css-1byjzqg"
              >
                <div
                  className="css-otejxm"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-1i2htk9"
        >
          <div
            className="css-1j3g0qd"
          />
        </div>
      </div>
      <div
        className="css-1fq8nx6"
      >
        <div
          className="css-58omaf"
          onClick={[Function]}
        >
          <div
            className="css-1m37xb3"
          >
            <div
              className="css-k4qf09"
            >
              <div>
                The Drawer #2
              </div>
            </div>
          </div>
          <div
            className="css-qs2rg7"
          >
            <button
              className="css-wepra9"
              onClick={[Function]}
            >
              <div
                aria-label="Expand"
                className="css-1byjzqg"
              >
                <div
                  className="css-otejxm"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-1i2htk9"
        >
          <div
            className="css-1j3g0qd"
          />
        </div>
      </div>
      <div
        className="css-1fq8nx6"
      >
        <div
          className="css-58omaf"
          onClick={[Function]}
        >
          <div
            className="css-1m37xb3"
          >
            <div
              className="css-k4qf09"
            >
              <div>
                The Drawer #2
              </div>
            </div>
          </div>
          <div
            className="css-qs2rg7"
          >
            <button
              className="css-wepra9"
              onClick={[Function]}
            >
              <div
                aria-label="Expand"
                className="css-1byjzqg"
              >
                <div
                  className="css-otejxm"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-1i2htk9"
        >
          <div
            className="css-1j3g0qd"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer stack of non-sibling drawers 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <div>
        <div
          className="css-1fq8nx6"
        >
          <div
            className="css-58omaf"
            onClick={[Function]}
          >
            <div
              className="css-1m37xb3"
            >
              <div
                className="css-k4qf09"
              >
                <div>
                  The Drawer #1
                </div>
              </div>
            </div>
            <div
              className="css-qs2rg7"
            >
              <button
                className="css-wepra9"
                onClick={[Function]}
              >
                <div
                  aria-label="Expand"
                  className="css-1byjzqg"
                >
                  <div
                    className="css-otejxm"
                  >
                    <svg
                      aria-label="caret down icon"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            className="css-1i2htk9"
          >
            <div
              className="css-1j3g0qd"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          className="css-1fq8nx6"
        >
          <div
            className="css-58omaf"
            onClick={[Function]}
          >
            <div
              className="css-1m37xb3"
            >
              <div
                className="css-k4qf09"
              >
                <div>
                  The Drawer #2
                </div>
              </div>
            </div>
            <div
              className="css-qs2rg7"
            >
              <button
                className="css-wepra9"
                onClick={[Function]}
              >
                <div
                  aria-label="Expand"
                  className="css-1byjzqg"
                >
                  <div
                    className="css-otejxm"
                  >
                    <svg
                      aria-label="caret down icon"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            className="css-1i2htk9"
          >
            <div
              className="css-1j3g0qd"
            />
          </div>
        </div>
      </div>
      <div>
        <div
          className="css-1fq8nx6"
        >
          <div
            className="css-58omaf"
            onClick={[Function]}
          >
            <div
              className="css-1m37xb3"
            >
              <div
                className="css-k4qf09"
              >
                <div>
                  The Drawer #2
                </div>
              </div>
            </div>
            <div
              className="css-qs2rg7"
            >
              <button
                className="css-wepra9"
                onClick={[Function]}
              >
                <div
                  aria-label="Expand"
                  className="css-1byjzqg"
                >
                  <div
                    className="css-otejxm"
                  >
                    <svg
                      aria-label="caret down icon"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            className="css-1i2htk9"
          >
            <div
              className="css-1j3g0qd"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer using onToggle prop 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <div
        className="css-1fq8nx6"
      >
        <div
          className="css-58omaf"
          onClick={[Function]}
        >
          <div
            className="css-1m37xb3"
          >
            <div
              className="css-k4qf09"
            >
              <div>
                Drawer is 
                closed
              </div>
            </div>
          </div>
          <div
            className="css-qs2rg7"
          >
            <button
              className="css-wepra9"
              onClick={[Function]}
            >
              <div
                aria-label="Expand"
                className="css-1byjzqg"
              >
                <div
                  className="css-otejxm"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-1i2htk9"
        >
          <div
            className="css-1j3g0qd"
          >
            Drawer Content Here
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer using startOpen prop 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div
      className="css-1fq8nx6"
    >
      <div
        className="css-a8p3d5"
        onClick={[Function]}
      >
        <div
          className="css-1m37xb3"
        >
          <div
            className="css-k4qf09"
          >
            <div>
              Base here
            </div>
          </div>
        </div>
        <div
          className="css-qs2rg7"
        >
          <button
            className="css-wepra9"
            onClick={[Function]}
          >
            <div
              aria-label="Collapse"
              className="css-xnveog"
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-ule0ur"
      >
        <div
          className="css-1j3g0qd"
        >
          <div>
            Panel here
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer with row component 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div
      className="css-1fq8nx6"
    >
      <div
        className="css-58omaf"
        onClick={[Function]}
      >
        <div
          className="css-1m37xb3"
        >
          <div
            className="css-k4qf09"
          >
            <div
              className="css-13y9csq"
            >
              <div
                className="css-js3ti3"
              >
                <div
                  className="css-y8jh93"
                />
              </div>
              <div
                className="css-kxulf3"
              >
                <div
                  className="css-1e23mlv"
                >
                  Look at me! I'm a &lt;Row /&gt;!
                </div>
                <div
                  className="css-gmo5z6"
                >
                  <span
                    className="css-1kcrbi9"
                  >
                    Kitten McCatbuns
                  </span>
                  <span
                    aria-hidden={true}
                    className="css-kykfz1"
                  >
                    ·
                  </span>
                  <span
                    className="css-1kcrbi9"
                  >
                    23 hours of cuteness
                  </span>
                </div>
              </div>
              <div
                className="css-2c174p"
              >
                <button
                  className="css-10dk2o2"
                >
                  <div
                    className="css-otejxm"
                  >
                    <svg
                      aria-label="more icon"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 14.5c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm12 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm-6 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2z"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-qs2rg7"
        >
          <button
            className="css-wepra9"
            onClick={[Function]}
          >
            <div
              aria-label="Expand"
              className="css-1byjzqg"
            >
              <div
                className="css-otejxm"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-1i2htk9"
      >
        <div
          className="css-1j3g0qd"
        >
          Drawer Content Here
        </div>
      </div>
    </div>
  </div>
</div>
`;
